feat:ajout d'un compteur de point et d'un score final

--- a/src/app/components/country-list/country-list.component.css
+++ b/src/app/components/country-list/country-list.component.css
@@ -17,7 +17,7 @@ h2 {
   text-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
 }
 
-div[*ngIf="loading"] {
+div {
   text-align: center;
   color: white;
   font-size: 18px;
