--- a/src/app/components/flag-quiz/flag-quiz.component.html
+++ b/src/app/components/flag-quiz/flag-quiz.component.html
@@ -1,4 +1,8 @@
 <!-- QUIZ EN COURS -->
+<button routerLink="/">Retour à la liste des pays</button>
+<div *ngIf="!question">
+  Chargement du quiz...
+</div>
 <div class="quiz-container" *ngIf="question && !isFinished">
   <div class="quiz-card">
     <h2 class="quiz-title">
@@ -29,15 +33,6 @@
     <p *ngIf="question.userAnswer" class="answer-feedback">
       {{ question.isCorrect ? '✅ Bonne réponse !' : '❌ Mauvaise réponse' }}
     </p>
-
-
-        <button
-          *ngIf="question.userAnswer"
-          class="next-button option-button"
-          (click)="nextQuestion()"
-        >
-          Question suivante
-        </button>
   </div>
 </div>
 
@@ -51,7 +46,7 @@
       <strong>{{ score }} / {{ TOTAL_QUESTIONS }}</strong>
     </p>
 
-    <p *ngIf="score >= 9" class="result-message excellent">Trop fort !</p>
+    <p *ngIf="score >= 9" class="result-message excellent">beau gosse!</p>
     <p *ngIf="score >= 5 && score < 9" class="result-message good">ça va</p>
     <p *ngIf="score < 5" class="result-message retry">Loser !</p>
   </div>
