--- a/src/app/components/country-list/country-list.component.html
+++ b/src/app/components/country-list/country-list.component.html
@@ -1,15 +1,23 @@
 <h2>Liste des pays</h2>
 
 <div *ngIf="loading">Chargement des pays...</div>
-<button routerLink="/quiz">Lancer le quiz</button>
+<button type="button" routerLink="/quiz">Lancer le quiz</button>
+<button (click)="sortByPopulation()">Trier par population</button>
+<input type="text" placeholder="Rechercher un pays" (input)="onSearch($event)"/>
 
 <ul *ngIf="!loading">
-  <li *ngFor="let country of countries">
+  <li *ngFor="let country of countries" (mouseover)="hoveredCountryCode = country.name.common" (mouseout)="hoveredCountryCode = null">
     <img 
       [src]="country.flags.png" 
       alt="Drapeau"
       width="30"
     />
     {{ country.name.common }} - {{ country.capital?.[0] }}
+    <div *ngIf="hoveredCountryCode === country.name.common">
+      <p>Capitale : {{ country.capital?.[0] || 'N/A' }}</p>
+      <p>Région : {{ country.region }}</p>
+      <p>population : {{ country.population }}</p>
+      <p>Code pays : {{ country.cca3 }}</p>
+    </div>
   </li>
 </ul>
