--- a/src/app/components/country-list/country-list.component.html
+++ b/src/app/components/country-list/country-list.component.html
@@ -7,7 +7,7 @@
 
 <ul *ngIf="!loading">
   <li *ngFor="let country of countries" (mouseover)="hoveredCountryCode = country.name.common" (mouseout)="hoveredCountryCode = null">
-    <img 
+    <!-- <img 
       [src]="country.flags.png" 
       alt="Drapeau"
       width="30"
@@ -17,7 +17,9 @@
       <p>Capitale : {{ country.capital?.[0] || 'N/A' }}</p>
       <p>Région : {{ country.region }}</p>
       <p>population : {{ country.population }}</p>
-      <p>Code pays : {{ country.cca3 }}</p>
-    </div>
+      <p>Code pays : {{ country.cca3 }}</p>   
+    </div> -->
+    <app-country-details [country] = "country"></app-country-details>
   </li>
 </ul>
+
